@@ -16,7 +16,10 @@
 
 package io.nem.symbol.sdk.infrastructure;
 
+import io.nem.symbol.sdk.api.MetadataSearchCriteria;
+import io.nem.symbol.sdk.api.MetadataTransactionService;
 import io.nem.symbol.sdk.model.account.Account;
+import io.nem.symbol.sdk.model.account.Address;
 import io.nem.symbol.sdk.model.metadata.Metadata;
 import io.nem.symbol.sdk.model.metadata.MetadataType;
 import io.nem.symbol.sdk.model.namespace.NamespaceId;
@@ -24,6 +27,7 @@ import io.nem.symbol.sdk.model.transaction.AggregateTransaction;
 import io.nem.symbol.sdk.model.transaction.AggregateTransactionFactory;
 import io.nem.symbol.sdk.model.transaction.NamespaceMetadataTransaction;
 import io.nem.symbol.sdk.model.transaction.NamespaceMetadataTransactionFactory;
+import io.reactivex.Observable;
 import java.math.BigInteger;
 import java.util.Collections;
 import java.util.List;
@@ -39,15 +43,13 @@ import org.junit.jupiter.params.provider.EnumSource;
 @TestInstance(TestInstance.Lifecycle.PER_CLASS)
 public class NamespaceMetadataIntegrationTest extends BaseIntegrationTest {
 
-    private Account testAccount = config().getDefaultAccount();
+    private final Account testAccount = config().getDefaultAccount();
 
     @ParameterizedTest
     @EnumSource(RepositoryType.class)
     public void addMetadataToNamespace(RepositoryType type) {
         String namespaceName =
-            "namespace-for-metadata-integration-test-" + new Double(
-                Math.floor(Math.random() * 10000))
-                .intValue();
+            "namespace-for-metadata-integration-test-" + Double.valueOf(Math.floor(Math.random() * 10000)).intValue();
 
         NamespaceId targetNamespaceId = createRootNamespace(type, testAccount, namespaceName);
 
@@ -55,78 +57,67 @@ public class NamespaceMetadataIntegrationTest extends BaseIntegrationTest {
 
         String message = "This is the message in the Namespace!";
         BigInteger key = BigInteger.TEN;
-        NamespaceMetadataTransaction transaction =
-            NamespaceMetadataTransactionFactory.create(
-                getNetworkType(), testAccount.getAddress(), targetNamespaceId,
-                key, message
-            ).maxFee(this.maxFee).build();
+        Address targetAddress = testAccount.getAddress();
 
-        AggregateTransaction aggregateTransaction = AggregateTransactionFactory
-            .createComplete(getNetworkType(),
-                Collections.singletonList(transaction.toAggregate(testAccount.getPublicAccount())))
-            .maxFee(this.maxFee).build();
+        MetadataTransactionService metadataTransactionService = new MetadataTransactionServiceImpl(
+            getRepositoryFactory(type));
 
-        AggregateTransaction announceCorrectly = announceAndValidate(type, testAccount,
-            aggregateTransaction);
+        Observable<NamespaceMetadataTransactionFactory> namespaceMetadataTransactionFactory = metadataTransactionService
+            .createNamespaceMetadataTransactionFactory(targetAddress, key, message, targetAddress, targetNamespaceId);
 
-        Assertions
-            .assertEquals(testAccount.getPublicAccount(), announceCorrectly.getSigner().get());
+        NamespaceMetadataTransaction transaction = get(namespaceMetadataTransactionFactory).build();
+        AggregateTransaction aggregateTransaction = AggregateTransactionFactory.createComplete(getNetworkType(),
+            Collections.singletonList(transaction.toAggregate(testAccount.getPublicAccount()))).maxFee(this.maxFee)
+            .build();
+        
+        AggregateTransaction announceCorrectly = announceAndValidate(type, testAccount, aggregateTransaction);
+
+        Assertions.assertEquals(testAccount.getPublicAccount(), announceCorrectly.getSigner().get());
         Assertions.assertEquals(1, announceCorrectly.getInnerTransactions().size());
-        Assertions
-            .assertEquals(transaction.getType(),
-                announceCorrectly.getInnerTransactions().get(0).getType());
+        Assertions.assertEquals(transaction.getType(), announceCorrectly.getInnerTransactions().get(0).getType());
         NamespaceMetadataTransaction processedTransaction = (NamespaceMetadataTransaction) announceCorrectly
-            .getInnerTransactions()
-            .get(0);
+            .getInnerTransactions().get(0);
 
         //TODO problem comparing namespaces, sometime they are negative big integers
         Assertions.assertEquals(transaction.getTargetNamespaceId().getIdAsHex(),
             processedTransaction.getTargetNamespaceId().getIdAsHex());
-        Assertions.assertEquals(transaction.getValueSizeDelta(),
-            processedTransaction.getValueSizeDelta());
+        Assertions.assertEquals(transaction.getValueSizeDelta(), processedTransaction.getValueSizeDelta());
 
-        Assertions.assertEquals(transaction.getScopedMetadataKey(),
-            processedTransaction.getScopedMetadataKey());
+        Assertions.assertEquals(transaction.getScopedMetadataKey(), processedTransaction.getScopedMetadataKey());
 
         System.out.println("Metadata '" + message + "' stored!");
 
+        sleep(3000);
         List<Metadata> metadata = get(getRepositoryFactory(type).createMetadataRepository()
-            .getNamespaceMetadata(targetNamespaceId,
-                Optional.empty()));
+            .search(new MetadataSearchCriteria().targetId(targetNamespaceId).metadataType(MetadataType.NAMESPACE)))
+            .getData();
 
         assertMetadata(transaction, metadata);
 
-        assertMetadata(transaction, get(getRepositoryFactory(type).createMetadataRepository()
-            .getNamespaceMetadataByKey(targetNamespaceId, key)));
+        assertMetadata(transaction, get(getRepositoryFactory(type).createMetadataRepository().search(
+            new MetadataSearchCriteria().targetId(targetNamespaceId).metadataType(MetadataType.NAMESPACE)
+                .scopedMetadataKey(key))).getData());
 
-        assertMetadata(transaction,
-            Collections.singletonList(get(getRepositoryFactory(type).createMetadataRepository()
-                .getNamespaceMetadataByKeyAndSender(targetNamespaceId, key,
-                    testAccount.getAddress()))));
+        assertMetadata(transaction, get(getRepositoryFactory(type).createMetadataRepository().search(
+            new MetadataSearchCriteria().targetId(targetNamespaceId).metadataType(MetadataType.NAMESPACE)
+                .targetAddress(targetAddress).scopedMetadataKey(key))).getData());
 
         Assertions.assertEquals(message, processedTransaction.getValue());
 
     }
 
-    private String assertMetadata(NamespaceMetadataTransaction transaction,
-        List<Metadata> metadata) {
+    private String assertMetadata(NamespaceMetadataTransaction transaction, List<Metadata> metadata) {
 
         Optional<Metadata> endpointMetadata = metadata.stream().filter(
-            m -> m.getMetadataEntry().getScopedMetadataKey()
-                .equals(transaction.getScopedMetadataKey()) &&
-                m.getMetadataEntry().getMetadataType()
-                    .equals(MetadataType.NAMESPACE) &&
-                m.getMetadataEntry()
-                    .getTargetAddress().equals(testAccount.getPublicKey())).findFirst();
+            m -> m.getScopedMetadataKey().equals(transaction.getScopedMetadataKey()) && m.getMetadataType()
+                .equals(MetadataType.NAMESPACE) && m.getTargetAddress().equals(testAccount.getAddress())).findFirst();
 
         Assertions.assertTrue(endpointMetadata.isPresent());
 
-        Assertions.assertEquals(transaction.getTargetNamespaceId(),
-            endpointMetadata.get().getMetadataEntry().getTargetId().get());
-
-        Assertions.assertEquals(transaction.getValue(),
-            endpointMetadata.get().getMetadataEntry().getValue());
-        return endpointMetadata.get().getId();
+        Assertions.assertEquals(transaction.getTargetNamespaceId(), endpointMetadata.get().getTargetId().get());
+        Assertions.assertNotNull(endpointMetadata.get().getCompositeHash());
+        Assertions.assertEquals(transaction.getValue(), endpointMetadata.get().getValue());
+        return endpointMetadata.get().getCompositeHash();
     }
 
 
